tests/baselines/reference/asyncFunctionDeclaration8.errors.txt
tests/cases/conformance/async/downlevel/asyncFunctionDeclaration/asyncFunctionDeclaration8.ts(1,11): error TS9002: Computed property names are not currently supported.


==== tests/cases/conformance/async/downlevel/asyncFunctionDeclaration/asyncFunctionDeclaration8.ts (1 errors) ====
    var v = { [await]: foo }
              ~~~~~~~
!!! error TS9002: Computed property names are not currently supported.